implementation of tables

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <!-- Nav Item - SUPPLIERS -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="pages/suppliers.html">
                     <i class="fas fa-fw fa-solid fa-truck-field"></i>
                     <span>Suppliers</span></a>
             </li>
@@ -98,21 +98,21 @@
 
             <!-- Nav Item - SERVICES -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="pages/services.html">
                     <i class="fas fa-fw fa-solid fa-screwdriver-wrench"></i>
                     <span>Services</span></a>
             </li>
 
             <!-- Nav Item - REPORTS -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="pages/reports.html">
                     <i class="fas fa-fw fa-solid fa-chart-line"></i>
                     <span>Reports</span></a>
             </li>
 
             <!-- Nav Item - SALES -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="pages/sales.html">
                     <i class="fas fa-fw fa-solid fa-dollar-sign"></i>
                     <span>Sales</span></a>
             </li>
@@ -134,12 +134,6 @@
                 </div>
             </li>
 
-            <!-- Nav Item - TRY -->
-            <li class="nav-item">
-                <a class="nav-link" href="pages/trytry.html">
-                    <i class="fas fa-fw fa-solid fa-dollar-sign"></i>
-                    <span>Try</span></a>
-            </li>
 
 
             <!-- Divider -->
