--- a/pages/products.html
+++ b/pages/products.html
@@ -406,9 +406,9 @@
                         </div> -->
                         <div class="card-body">
                             <div class="employee-add-button">
-                                <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" >
+                                <a href="products.html" class="d-sm-inline-block btn products-filter active" >
                                     All</a>
-                                    <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" >
+                                <a href="products-near-expiry.html" class="d-sm-inline-block btn products-filter" >
                                     Near Expiry</a>
                             </div>
                             <div class="table-responsive">
