--- a/pages/home.html
+++ b/pages/home.html
@@ -59,7 +59,7 @@
                         <li class='logo'><a href='#'><img src='../img/logo/logo.png'><span class="top-bar-text">We-AIMS - WILLEM'S AUTOMOTIVE INVANTORY MANAGEMENT SYSTEM</span></a></li>
                         <input type='checkbox' id='check' />
                         <span class="menu">
-                            <li><a href="home.html" class="active">Home</a></li>
+                            <li class="shade"><a href="home.html" class="active">Home</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="">Features</a></li>
                             <li><a href="">Contact</a></li>
