--- a/pages/about.html
+++ b/pages/about.html
@@ -76,7 +76,7 @@
                         <input type='checkbox' id='check' />
                         <span class="menu">
                             <li><a href="home.html">Home</a></li>
-                            <li><a href="about.html" class="active">About</a></li>
+                            <li class="shade"><a href="about.html" class="active">About</a></li>
                             <li><a href="">Features</a></li>
                             <li><a href="">Contact</a></li>
                             <li><a href="login.html">Login</a></li>
