tables under construction

--- a/pages/customers.html
+++ b/pages/customers.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Blank</title>
+    <title>Customers</title>
 
     <!-- Custom fonts for this template-->
     <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -73,7 +73,7 @@
 
             <!-- Nav Item - SUPPLIERS -->
             <li class="nav-item">
-                <a class="nav-link" href="../pages/suppliers/html">
+                <a class="nav-link" href="../pages/suppliers.html">
                     <i class="fas fa-fw fa-solid fa-truck-field"></i>
                     <span>Suppliers</span></a>
             </li>
@@ -405,7 +405,7 @@
                             <h6 class="m-0 font-weight-bold text-primary"></h6>
                         </div> -->
                         <div class="card-body">
-                            <div class="employee-add-button">
+                            <div class="add-button">
                                 <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm" ><i
                                     class="fas fa-solid fa-plus fa-sm text-white-50"></i> Add</a>
                             </div>
