--- a/pages/products-near-expiry.html
+++ b/pages/products-near-expiry.html
@@ -405,7 +405,7 @@
                             <h6 class="m-0 font-weight-bold text-primary"></h6>
                         </div> -->
                         <div class="card-body">
-                            <div class="employee-add-button">
+                            <div class="add-button">
                                 <a href="products.html" class="d-sm-inline-block btn products-filter" >
                                     All</a>
                                 <a href="products-near-expiry.html" class="d-sm-inline-block btn products-filter active" >
