--- a/pages/suppliers.html
+++ b/pages/suppliers.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Employees</title>
+    <title>Suppliers</title>
 
     <!-- Custom fonts for this template-->
     <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -72,14 +72,14 @@
             </li>
 
             <!-- Nav Item - SUPPLIERS -->
-            <li class="nav-item">
-                <a class="nav-link" href="../pages/suppliers.html">
+            <li class="nav-item active">
+                <a class="nav-link" href="../pages/suppliers/html">
                     <i class="fas fa-fw fa-solid fa-truck-field"></i>
                     <span>Suppliers</span></a>
             </li>
 
             <!-- Nav Item - EMPLOYEES -->
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="../pages/employees.html">
                     <i class="fas fa-fw fa-solid fa-building-user"></i>
                     <span>Employees</span></a>
@@ -394,7 +394,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Employees</h1>
+                        <h1 class="h3 mb-0 text-gray-800">Suppliers</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                     </div>
